--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 
-/* Link to html5reset.css */
+
 @import url('css/html5reset.css');
 
-/* Global Styles */
 body {
   font-family: Arial, Verdana;
   background-color: #000000;
@@ -10,7 +9,6 @@ body {
   margin: 20px 20px 0 20px;
 }
 
-/* Headings */
 h1 {
   font-size: 42px;
   text-align: center;
@@ -22,13 +20,11 @@ h2 {
   color: #0D0D0D;
 }
 
-/* Default Paragraphs */
 p {
   font-size: 24px;
   padding: 10px 0 0 10px;
 }
 
-/* Images */
 img {
   width: 250px;
   margin: auto;
@@ -36,14 +32,12 @@ img {
   border: 10px dashed #FFFFFF;
 }
 
-/* Default div elements */
 div {
   min-height: 125px;
   padding: 20px;
   border: 3px solid #FFFFFF;
 }
 
-/* Specific Classes */
 .introduction {
   border-radius: 15px;
   margin-top: 15px;
@@ -84,7 +78,6 @@ div {
   border-right: 5px solid #FFFFFF;
 }
 
-/* Footer */
 footer {
   background: linear-gradient(0deg, #000000, #0000FF 25%, #0066FF 70%, #000000);
   border: 5px solid #FFFFFF;
@@ -94,4 +87,43 @@ footer p {
   font-size: 20px;
   text-align: right;
   padding: 15px 15px 15px 0;
+}
+
+
+
+.red {
+  background-color: #FF0000;
+  text-align: right;
+  margin-left: 50px;
+  border-bottom: 2px solid #FFFFFF;
+  border-left: 5px solid #FFFFFF;
+}
+
+.blue {
+  background-color: #0000FF;
+  text-align: left;
+  margin-right: 50px;
+  border-top: 2px solid #FFFFFF;
+  border-right: 5px solid #FFFFFF;
+}
+
+.blue h2 {
+  color: #C4C4C4;
+}
+
+.yellow {
+  background-color: #FFFF00;
+  text-align: right;
+  margin-left: 50px;
+  color: #707070;
+  border-bottom: 2px solid #FFFFFF;
+  border-left: 5px solid #FFFFFF;
+}
+
+.green {
+  background-color: #00EB00;
+  text-align: left;
+  margin-right: 50px;
+  border-top: 2px solid #FFFFFF;
+  border-right: 5px solid #FFFFFF;
 }
