--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ div {
 }
 
 .green {
-  background-color: #00EB00;
+  background-color: #008500;
   text-align: left;
   margin-right: 50px;
   border-top: 2px solid #FFFFFF;
